[package]
name = "nsqute"
version = "0.1.0"
authors = ["Xavier Perez <duosrx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "NSQ Client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
bytes = "*"
crossbeam-channel = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
